--- a/styles/main.css
+++ b/styles/main.css
@@ -8,17 +8,45 @@ body {
     margin: 2rem auto;
     padding: 0 1rem;
 }
+/* Mobile-view */
  @media screen and (max-width: 768px) {
-    .portfolio-container {
-        display: flex;
-        flex-direction: column;
-        padding: 15px;
-        width: 100%;
-        background-color: #fff;
-        padding: 15px 0;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        z-index: 10;
-      }
+.portfolio-container {
+    padding: 0.5rem;
+}
+.header-container {
+    background-size: contain;
+    flex-direction: column;
+    padding: 0.5rem;
+    background-image: none;
+
+}
+.section-title,
+.section-title.contact,
+.section-title.education,
+.section-title.intern,
+.section-title.portfolio,
+.section-title.skills,
+.section-title.softskills {
+    font-size: 1.2rem;
+    padding: 0.5rem;
+
+}
+.profile-image-container img{
+    max-width: 100%;
+    height: auto;
+}
+.software-icon {
+    width: 32px;
+    height: 32px;
+}
+.decoration-dot {
+    width: 8px;
+    height: 8px;
+}
+.decoration-star {
+    width: 16px;
+    height: 16px;
+}
 }
 
 .header-container {
@@ -41,6 +69,16 @@ body {
     width: 40px;
     height: 40px;
     animation: spin 20s linear infinite;
+}
+.section-title {
+    display: inline-block;
+    padding: 0.5rem 2rem;
+    border-radius: 2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    position: relative;
+    white-space: nowrap;
+    backdrop-filter: blur(8px);
 }
 
 @keyframes spin {
