--- a/styles/main.css
+++ b/styles/main.css
@@ -8,12 +8,13 @@ body {
     margin: 2rem auto;
     padding: 0 1rem;
 }
-/* Mobile-view */
- @media screen and (max-width: 765px) {
-.portfolio-container {
+/* Mobile-view
+  @media screen and (max-width: 600px) { 
+ .portfolio-container { 
     padding: 0.5rem;
 }
 .header-container {
+    display: flex;
     flex-direction: column;
     padding: 0.5rem;
     background-image: none;
@@ -48,7 +49,7 @@ body {
     height: 16px;
 }
 
-}
+} */
 .header-container {
     position: relative;
     padding: 2rem;
